tests/baselines/reference/typecheckCommaExpression.errors.txt
==== tests/cases/compiler/typecheckCommaExpression.ts (2 errors) ====
    (a, b)
     ~
!!! error TS2095: Could not find symbol 'a'.
        ~
!!! error TS2095: Could not find symbol 'b'.